[gd_scene load_steps=7 format=3 uid="uid://mp638iq6vrn4"]

[ext_resource type="Script" path="res://scripts/weapons/projectiles/rocket_projectile.gd" id="1_mi6pk"]
[ext_resource type="Texture2D" uid="uid://bu57a7rtetpj7" path="res://img/projectile_orange.png" id="2_6jhiv"]
[ext_resource type="Texture2D" uid="uid://b3drwdus5br6n" path="res://img/explosion.png" id="3_q0bfa"]
[ext_resource type="AudioStream" uid="uid://m55e883vew8l" path="res://audio/sfx/explosion.ogg" id="4_6yb42"]

[sub_resource type="SphereShape3D" id="SphereShape3D_sb223"]
radius = 0.25

[sub_resource type="SphereShape3D" id="SphereShape3D_a503m"]
radius = 0.001

[node name="RocketProjectile" type="Area3D" node_paths=PackedStringArray("projectile_lifetime_timer")]
collision_layer = 8
collision_mask = 243
script = ExtResource("1_mi6pk")
direct_damage = 150
projectile_lifetime_timer = NodePath("ProjectileLifetimeTimer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_sb223")

[node name="Sprite3D" type="Sprite3D" parent="."]
billboard = 1
texture_filter = 0
texture = ExtResource("2_6jhiv")

[node name="ExplosionSprite" type="Sprite3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
visible = false
pixel_size = 0.07
billboard = 1
texture_filter = 0
texture = ExtResource("3_q0bfa")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_6yb42")
bus = &"SFX"

[node name="ProjectileLifetimeTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ExplosionArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 101
input_ray_pickable = false
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExplosionArea"]
shape = SubResource("SphereShape3D_a503m")

[node name="RayCast3D" type="RayCast3D" parent="."]
enabled = false
target_position = Vector3(0, -2.5, 0)
collision_mask = 247
hit_from_inside = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ProjectileLifetimeTimer" to="." method="_destroy_projectile"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
